src/index.css
@import url('https://fonts.googleapis.com/css2?family=Rubik:wght@400;700&display=swap');


html, body, #root {
  font-family: 'Rubik', sans-serif;
  height: 100%;
  width: 100%;
  margin: 0;
  padding: 0;
  overflow-x: hidden; /* prevents horizontal scroll */
    box-sizing: border-box;
}

.homepage {
  background: linear-gradient(135deg, #A0E7E5 0%, #FFB5A7 50%, #EAE4FF 100%);
  background-size: 200% 200%;
  animation: gradientShift 8s ease infinite;
  color: #444;
  padding: 5rem 2rem;
  text-align: center;
  height: 50vh;
}

@keyframes gradientShift {
  0% { background-position: 0% 50%; }
  50% { background-position: 100% 50%; }
  100% { background-position: 0% 50%; }
}


.navbar {
  color: #444; 
  border-bottom: 2px solid #A0E7E5;
}

.nav-link {
  color: #FFB5A7 !important;
  transition: color 0.3s ease;       
}

.navbar .nav-link:hover {
  color: #eb9d2a !important;
  text-decoration: underline;
}


.categories {
  background: linear-gradient(135deg, #A0E7E5 0%, #FFB5A7 50%, #EAE4FF 100%);
  background-size: 200% 200%;
  animation: gradientShift 8s ease infinite;
  color: black;
  padding: 5rem 2rem;
  text-align: center;
}

.categories-link {
  color: white !important;
  transition: color 0.3s ease; 
  text-decoration: none;
  font-weight: 500;
  border: 2px solid transparent;
  padding: 8px 16px;
  border-radius: 8px;
  transition: all 0.3s ease;      
}

.categories-link:hover {
  border: 2px solid #FFB5A7;
  color: white !important;
  box-shadow: 0 2px 6px rgba(0,0,0,0.1);
}


.homepage .container-fluid,
.homepage .row,
.homepage .col {
  margin: 0;
  padding: 0;
}

.cta {
  background-color: #d0f3f2;
  color: #111;
  font-weight: 700;
  border: 1px solid #8a5e10;
  border-radius: 8px;
  padding: 10px 24px;
  font-size: 1rem;
  cursor: pointer;
  box-shadow: 0 4px 0 #2a3d3c; /* shadow below */
  transition: all 0.2s ease;
}

.cta:hover {
  background-color: #A0E7E5; /* lighter shade on hover */
  transform: translateY(-3px); /* move UP slightly */
  border: 1px solid #8a5e10;
  box-shadow: 0 6px 0 #2a3d3c; /* deeper shadow while lifted */
}

.App {
  margin: 0;
  padding: 0;
  width: 100%;
}

.truncate-text {
  display: -webkit-box;
  -webkit-line-clamp: 3; /* number of lines to show */
  -webkit-box-orient: vertical;
  overflow: hidden;
  text-overflow: ellipsis;
}

.submit-button {
  width: 100%;
}

.post-card {
  cursor: pointer;       
  transition: transform 0.2s ease;
}

/*.post-card:hover {
  transform: scale(1.02); 
}*/

.post-table {
  border-radius: 15px;
  overflow: hidden; 
  background-color: white;
}

.pagination-btn {
  background: #FFB5A7;
}

